# Fast-Gradient-Signed-Method-FGSM

./: .gitignore  PACKAGING_GUIDE.md  README_CN.md  StudyPandaAttackDemo.spec  StudyPandaAttackDemo_GUI.spec  app_gui.py  attack_core.py  build.py  build_and_package.py  build_gui.py  fgsm.py  imagenet_class_index.json  predict_normal.py  pyproject.toml  targeted_fgsm.py  utils.py
backend/: attack_core.py  en_to_cn_mapping.json  imagenet_class_index_cn.json  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
scripts/: fgsm.py  predict_normal.py  targeted_fgsm.py  utils.py
